Sprint1-Solutions/Ansible-Solutions/Ex1-CloudFormationforInstallingDockeronEC2Solution/DockerServer-sg.tf

resource "aws_security_group" "docker_sg" {
  name        = "docker_sg"
  description = "Allow docker Traffic"
  vpc_id      = "vpc-0bae7ba6ff85fec20"

  ingress {
    description = "Allow from Personal CIDR block"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow SSH from Personal CIDR block"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow all ports"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "Docker_SG-TF"
  }
}
